mtd: lpddr_cmds: fix signed shifts in lpddr_cmds (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12872,6 +12872,7 @@
 	patches.kernel.org/6.12.63-270-net-phy-aquantia-check-for-NVMEM-deferral.patch
 	patches.kernel.org/6.12.63-271-selftests-bonding-add-ipvlan-over-bond-testin.patch
 	patches.kernel.org/6.12.63-272-selftests-bonding-add-delay-before-each-xvlan.patch
+	patches.kernel.org/6.12.63-273-mtd-lpddr_cmds-fix-signed-shifts-in-lpddr_cmd.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
