--- a/series.conf
+++ b/series.conf
@@ -12615,6 +12615,7 @@
 	patches.kernel.org/6.12.63-013-accel-ivpu-Fix-DCT-active-percent-format.patch
 	patches.kernel.org/6.12.63-014-drm-vgem-fence-Fix-potential-deadlock-on-rele.patch
 	patches.kernel.org/6.12.63-015-USB-Fix-descriptor-count-when-handling-invali.patch
+	patches.kernel.org/6.12.63-016-pinctrl-renesas-rzg2l-Fix-PMC-restore.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
