--- a/series.conf
+++ b/series.conf
@@ -12650,6 +12650,7 @@
 	patches.kernel.org/6.12.63-048-block-mq-deadline-Introduce-dd_start_request.patch
 	patches.kernel.org/6.12.63-049-block-mq-deadline-Switch-back-to-a-single-dis.patch
 	patches.kernel.org/6.12.63-050-arm64-dts-freescale-imx8mp-venice-gw7905-2x-r.patch
+	patches.kernel.org/6.12.63-051-arm64-dts-imx8mm-venice-gw72xx-remove-unused-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
