--- a/series.conf
+++ b/series.conf
@@ -12811,6 +12811,7 @@
 	patches.kernel.org/6.12.63-209-crypto-ccree-Correctly-handle-return-of-sg_ne.patch
 	patches.kernel.org/6.12.63-210-RISC-V-KVM-Fix-guest-page-fault-within-HLV-in.patch
 	patches.kernel.org/6.12.63-211-erofs-limit-the-level-of-fs-stacking-for-file.patch
+	patches.kernel.org/6.12.63-212-RDMA-bnxt_re-Fix-the-inline-size-for-GenP7-de.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
