fs/nls: Fix inconsistency between utf8_to_utf32() and utf32_to_utf8() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12912,6 +12912,7 @@
 	patches.kernel.org/6.12.63-310-NFS-Automounted-filesystems-should-inherit-ro.patch
 	patches.kernel.org/6.12.63-311-Expand-the-type-of-nfs_fattr-valid.patch
 	patches.kernel.org/6.12.63-312-NFS-Fix-inheritance-of-the-block-sizes-when-a.patch
+	patches.kernel.org/6.12.63-313-fs-nls-Fix-inconsistency-between-utf8_to_utf3.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
