--- a/series.conf
+++ b/series.conf
@@ -12734,6 +12734,7 @@
 	patches.kernel.org/6.12.63-132-scsi-smartpqi-Fix-device-resources-accessed-a.patch
 	patches.kernel.org/6.12.63-133-dt-bindings-PCI-amlogic-Fix-the-register-name.patch
 	patches.kernel.org/6.12.63-134-RDMA-rtrs-server-Fix-error-handling-in-get_or.patch
+	patches.kernel.org/6.12.63-135-ARM-dts-stm32-stm32mp157c-phycore-Fix-STMPE81.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
