--- a/series.conf
+++ b/series.conf
@@ -12703,6 +12703,7 @@
 	patches.kernel.org/6.12.63-101-perf-lock-contention-Load-kernel-map-before-l.patch
 	patches.kernel.org/6.12.63-102-perf-record-skip-synthesize-event-when-open-e.patch
 	patches.kernel.org/6.12.63-103-power-supply-rt5033_charger-Fix-device-node-r.patch
+	patches.kernel.org/6.12.63-104-power-supply-cw2015-Check-devm_delayed_work_a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
