wifi: ath10k: Avoid vdev delete timeout when firmware is already down (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12624,6 +12624,7 @@
 	patches.kernel.org/6.12.63-022-HID-logitech-hidpp-Do-not-assume-FAP-in-hidpp.patch
 	patches.kernel.org/6.12.63-023-objtool-Fix-standalone-hacks-jump_label.patch
 	patches.kernel.org/6.12.63-024-objtool-Fix-weak-symbol-detection.patch
+	patches.kernel.org/6.12.63-025-wifi-ath10k-Avoid-vdev-delete-timeout-when-fi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
