--- a/series.conf
+++ b/series.conf
@@ -12663,6 +12663,7 @@
 	patches.kernel.org/6.12.63-061-clk-qcom-camcc-sm7150-Fix-PLL-config-of-PLL2.patch
 	patches.kernel.org/6.12.63-062-soc-Switch-back-to-struct-platform_driver-rem.patch
 	patches.kernel.org/6.12.63-063-soc-qcom-gsbi-fix-double-disable-caused-by-de.patch
+	patches.kernel.org/6.12.63-064-crypto-asymmetric_keys-prevent-overflow-in-as.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
