watchdog: starfive: Fix resource leak in probe error path (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12766,6 +12766,7 @@
 	patches.kernel.org/6.12.63-164-selftests-bpf-Fix-failure-paths-in-send_signa.patch
 	patches.kernel.org/6.12.63-165-bpf-Check-skb-transport_header-is-set-in-bpf_.patch
 	patches.kernel.org/6.12.63-166-watchdog-wdat_wdt-Fix-ACPI-table-leak-in-prob.patch
+	patches.kernel.org/6.12.63-167-watchdog-starfive-Fix-resource-leak-in-probe-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
