clk: renesas: r9a06g032: Fix memory leak in error path (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12748,6 +12748,7 @@
 	patches.kernel.org/6.12.63-146-coresight-etm4x-Correct-polling-IDLE-bit.patch
 	patches.kernel.org/6.12.63-147-coresight-etm4x-Extract-the-trace-unit-contro.patch
 	patches.kernel.org/6.12.63-148-coresight-etm4x-Add-context-synchronization-b.patch
+	patches.kernel.org/6.12.63-149-clk-renesas-r9a06g032-Fix-memory-leak-in-erro.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
