net: phy: aquantia: check for NVMEM deferral (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12869,6 +12869,7 @@
 	patches.kernel.org/6.12.63-267-mtd-rawnand-renesas-Handle-devm_pm_runtime_en.patch
 	patches.kernel.org/6.12.63-268-spi-ch341-fix-out-of-bounds-memory-access-in-.patch
 	patches.kernel.org/6.12.63-269-vfio-pci-Use-RCU-for-error-request-triggers-t.patch
+	patches.kernel.org/6.12.63-270-net-phy-aquantia-check-for-NVMEM-deferral.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
