accel/ivpu: Ensure rpm_runtime_put in case of engine reset/resume fail (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12609,6 +12609,7 @@
 	patches.kernel.org/6.12.63-007-smack-fix-bug-setting-task-label-silently-ign.patch
 	patches.kernel.org/6.12.63-008-gpu-host1x-Fix-race-in-syncpt-alloc-free.patch
 	patches.kernel.org/6.12.63-009-accel-ivpu-Prevent-runtime-suspend-during-con.patch
+	patches.kernel.org/6.12.63-010-accel-ivpu-Ensure-rpm_runtime_put-in-case-of-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
