md: fix rcu protection in md_wakeup_thread (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12728,6 +12728,7 @@
 	patches.kernel.org/6.12.63-126-ext4-correct-the-checking-of-quota-files-befo.patch
 	patches.kernel.org/6.12.63-127-perf-x86-intel-Correct-large-PEBS-flag-check.patch
 	patches.kernel.org/6.12.63-128-regulator-core-disable-supply-if-enabling-mai.patch
+	patches.kernel.org/6.12.63-129-md-fix-rcu-protection-in-md_wakeup_thread.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
