drm/vgem-fence: Fix potential deadlock on release (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12613,6 +12613,7 @@
 	patches.kernel.org/6.12.63-011-drm-panel-visionox-rm69299-Don-t-clear-all-mo.patch
 	patches.kernel.org/6.12.63-012-accel-ivpu-Make-function-parameter-names-cons.patch
 	patches.kernel.org/6.12.63-013-accel-ivpu-Fix-DCT-active-percent-format.patch
+	patches.kernel.org/6.12.63-014-drm-vgem-fence-Fix-potential-deadlock-on-rele.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
