--- a/series.conf
+++ b/series.conf
@@ -12856,6 +12856,7 @@
 	patches.kernel.org/6.12.63-254-spi-airoha-snfi-en7523-workaround-flash-damag.patch
 	patches.kernel.org/6.12.63-255-ARM-dts-samsung-universal_c210-turn-off-SDIO-.patch
 	patches.kernel.org/6.12.63-256-ARM-dts-samsung-exynos4210-i9100-turn-off-SDI.patch
+	patches.kernel.org/6.12.63-257-ARM-dts-samsung-exynos4210-trats-turn-off-SDI.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
