libbpf: Fix parsing of multi-split BTF (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12717,6 +12717,7 @@
 	patches.kernel.org/6.12.63-115-drm-panthor-Fix-race-with-suspend-during-unpl.patch
 	patches.kernel.org/6.12.63-116-drm-panthor-Fix-UAF-on-kernel-BO-VA-nodes.patch
 	patches.kernel.org/6.12.63-117-spi-tegra210-quad-Fix-timeout-handling.patch
+	patches.kernel.org/6.12.63-118-libbpf-Fix-parsing-of-multi-split-BTF.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
