--- a/series.conf
+++ b/series.conf
@@ -12916,6 +12916,7 @@
 	patches.kernel.org/6.12.63-314-platform-x86-asus-wmi-use-brightness_set_bloc.patch
 	patches.kernel.org/6.12.63-315-ASoC-bcm-bcm63xx-pcm-whistler-Check-return-va.patch
 	patches.kernel.org/6.12.63-316-ASoC-ak4458-Disable-regulator-when-error-happ.patch
+	patches.kernel.org/6.12.63-317-ASoC-ak5558-Disable-regulator-when-error-happ.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
