--- a/series.conf
+++ b/series.conf
@@ -12822,6 +12822,7 @@
 	patches.kernel.org/6.12.63-220-PCI-dwc-Fix-wrong-PORT_LOGIC_LTSSM_STATE_MASK.patch
 	patches.kernel.org/6.12.63-221-drm-nouveau-restrict-the-flush-page-to-a-32-b.patch
 	patches.kernel.org/6.12.63-222-um-Don-t-rename-vmap-to-kernel_vmap.patch
+	patches.kernel.org/6.12.63-223-iomap-factor-out-a-iomap_dio_done-helper.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
