--- a/series.conf
+++ b/series.conf
@@ -12658,6 +12658,7 @@
 	patches.kernel.org/6.12.63-056-PCI-rcar-gen2-Drop-ARM-dependency-from-PCI_RC.patch
 	patches.kernel.org/6.12.63-057-uio-uio_fsl_elbc_gpcm-Add-null-pointer-check-.patch
 	patches.kernel.org/6.12.63-058-clk-qcom-camcc-sm8550-Specify-Titan-GDSC-powe.patch
+	patches.kernel.org/6.12.63-059-clk-qcom-camcc-sm6350-Specify-Titan-GDSC-powe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
