--- a/series.conf
+++ b/series.conf
@@ -12908,6 +12908,7 @@
 	patches.kernel.org/6.12.63-306-NFSv4-pNFS-Clear-NFS_INO_LAYOUTCOMMIT-in-pnfs.patch
 	patches.kernel.org/6.12.63-307-Revert-nfs-ignore-SB_RDONLY-when-remounting-n.patch
 	patches.kernel.org/6.12.63-308-Revert-nfs-clear-SB_RDONLY-before-getting-sup.patch
+	patches.kernel.org/6.12.63-309-Revert-nfs-ignore-SB_RDONLY-when-mounting-nfs.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
