drm/msm/dpu: drop dpu_hw_dsc_destroy() prototype (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12760,6 +12760,7 @@
 	patches.kernel.org/6.12.63-158-arm64-dts-rockchip-Add-eeprom-vcc-supply-for-.patch
 	patches.kernel.org/6.12.63-159-arm64-dts-rockchip-Add-eeprom-vcc-supply-for-.patch
 	patches.kernel.org/6.12.63-160-crypto-iaa-Fix-incorrect-return-value-in-save.patch
+	patches.kernel.org/6.12.63-161-drm-msm-dpu-drop-dpu_hw_dsc_destroy-prototype.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
