--- a/series.conf
+++ b/series.conf
@@ -12610,6 +12610,7 @@
 	patches.kernel.org/6.12.63-008-gpu-host1x-Fix-race-in-syncpt-alloc-free.patch
 	patches.kernel.org/6.12.63-009-accel-ivpu-Prevent-runtime-suspend-during-con.patch
 	patches.kernel.org/6.12.63-010-accel-ivpu-Ensure-rpm_runtime_put-in-case-of-.patch
+	patches.kernel.org/6.12.63-011-drm-panel-visionox-rm69299-Don-t-clear-all-mo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
