wifi: ath11k: fix peer HE MCS assignment (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12666,6 +12666,7 @@
 	patches.kernel.org/6.12.63-064-crypto-asymmetric_keys-prevent-overflow-in-as.patch
 	patches.kernel.org/6.12.63-065-crypto-hisilicon-qm-restore-original-qos-valu.patch
 	patches.kernel.org/6.12.63-066-wifi-ath11k-fix-VHT-MCS-assignment.patch
+	patches.kernel.org/6.12.63-067-wifi-ath11k-fix-peer-HE-MCS-assignment.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
