--- a/series.conf
+++ b/series.conf
@@ -12953,6 +12953,7 @@
 	patches.kernel.org/6.12.63-351-ALSA-dice-fix-buffer-overflow-in-detect_strea.patch
 	patches.kernel.org/6.12.63-352-ALSA-wavefront-Fix-integer-overflow-in-sample.patch
 	patches.kernel.org/6.12.63-353-ASoC-codecs-nau8325-Silence-uninitialized-var.patch
+	patches.kernel.org/6.12.63-354-Linux-6.12.63.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
