--- a/series.conf
+++ b/series.conf
@@ -12835,6 +12835,7 @@
 	patches.kernel.org/6.12.63-233-ASoC-nau8325-use-simple-i2c-probe-function.patch
 	patches.kernel.org/6.12.63-234-ASoC-nau8325-add-missing-build-config.patch
 	patches.kernel.org/6.12.63-235-gfs2-Prevent-recursive-memory-reclaim.patch
+	patches.kernel.org/6.12.63-236-ASoC-fsl_xcvr-clear-the-channel-status-contro.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
