--- a/series.conf
+++ b/series.conf
@@ -12770,6 +12770,7 @@
 	patches.kernel.org/6.12.63-168-tracefs-fix-a-leak-in-eventfs_create_events_d.patch
 	patches.kernel.org/6.12.63-169-NFSD-blocklayout-Fix-minlength-check-in-proc_.patch
 	patches.kernel.org/6.12.63-170-block-blk-throttle-Fix-throttle-slice-time-fo.patch
+	patches.kernel.org/6.12.63-171-drm-msm-a2xx-stop-over-complaining-about-the-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
