greybus: gb-beagleplay: Fix timeout handling in bootloader functions (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12837,6 +12837,7 @@
 	patches.kernel.org/6.12.63-235-gfs2-Prevent-recursive-memory-reclaim.patch
 	patches.kernel.org/6.12.63-236-ASoC-fsl_xcvr-clear-the-channel-status-contro.patch
 	patches.kernel.org/6.12.63-237-firmware_loader-make-RUST_FW_LOADER_ABSTRACTI.patch
+	patches.kernel.org/6.12.63-238-greybus-gb-beagleplay-Fix-timeout-handling-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
