perf/x86/intel: Correct large PEBS flag check (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12726,6 +12726,7 @@
 	patches.kernel.org/6.12.63-124-locktorture-Fix-memory-leak-in-param_set_cpum.patch
 	patches.kernel.org/6.12.63-125-mfd-da9055-Fix-missing-regmap_del_irq_chip-in.patch
 	patches.kernel.org/6.12.63-126-ext4-correct-the-checking-of-quota-files-befo.patch
+	patches.kernel.org/6.12.63-127-perf-x86-intel-Correct-large-PEBS-flag-check.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
