--- a/series.conf
+++ b/series.conf
@@ -12686,6 +12686,7 @@
 	patches.kernel.org/6.12.63-084-mtd-rawnand-lpc32xx_slc-fix-GPIO-descriptor-l.patch
 	patches.kernel.org/6.12.63-085-perf-Remove-get_perf_callchain-init_nr-argume.patch
 	patches.kernel.org/6.12.63-086-bpf-Refactor-stack-map-trace-depth-calculatio.patch
+	patches.kernel.org/6.12.63-087-bpf-Fix-stackmap-overflow-check-in-__bpf_get_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
