remoteproc: qcom_q6v5_wcss: fix parsing of qcom,halt-regs (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12873,6 +12873,7 @@
 	patches.kernel.org/6.12.63-271-selftests-bonding-add-ipvlan-over-bond-testin.patch
 	patches.kernel.org/6.12.63-272-selftests-bonding-add-delay-before-each-xvlan.patch
 	patches.kernel.org/6.12.63-273-mtd-lpddr_cmds-fix-signed-shifts-in-lpddr_cmd.patch
+	patches.kernel.org/6.12.63-274-remoteproc-qcom_q6v5_wcss-fix-parsing-of-qcom.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
