--- a/series.conf
+++ b/series.conf
@@ -12810,6 +12810,7 @@
 	patches.kernel.org/6.12.63-208-crypto-starfive-Correctly-handle-return-of-sg.patch
 	patches.kernel.org/6.12.63-209-crypto-ccree-Correctly-handle-return-of-sg_ne.patch
 	patches.kernel.org/6.12.63-210-RISC-V-KVM-Fix-guest-page-fault-within-HLV-in.patch
+	patches.kernel.org/6.12.63-211-erofs-limit-the-level-of-fs-stacking-for-file.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
