--- a/series.conf
+++ b/series.conf
@@ -12850,6 +12850,7 @@
 	patches.kernel.org/6.12.63-248-virtio-fix-grammar-in-virtio_queue_info-docs.patch
 	patches.kernel.org/6.12.63-249-virtio-fix-virtqueue_set_affinity-docs.patch
 	patches.kernel.org/6.12.63-250-vdpa-mlx5-Fix-incorrect-error-code-reporting-.patch
+	patches.kernel.org/6.12.63-251-vhost-Fix-kthread-worker-cgroup-failure-handl.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
