--- a/series.conf
+++ b/series.conf
@@ -12899,6 +12899,7 @@
 	patches.kernel.org/6.12.63-297-f2fs-add-gc_boost_gc_multiple-sysfs-node.patch
 	patches.kernel.org/6.12.63-298-f2fs-add-gc_boost_gc_greedy-sysfs-node.patch
 	patches.kernel.org/6.12.63-299-f2fs-maintain-one-time-GC-mode-is-enabled-dur.patch
+	patches.kernel.org/6.12.63-300-NFS-Avoid-changing-nlink-when-file-removes-an.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
