--- a/series.conf
+++ b/series.conf
@@ -12735,6 +12735,7 @@
 	patches.kernel.org/6.12.63-133-dt-bindings-PCI-amlogic-Fix-the-register-name.patch
 	patches.kernel.org/6.12.63-134-RDMA-rtrs-server-Fix-error-handling-in-get_or.patch
 	patches.kernel.org/6.12.63-135-ARM-dts-stm32-stm32mp157c-phycore-Fix-STMPE81.patch
+	patches.kernel.org/6.12.63-136-ntfs3-init-run-lock-for-extend-inode.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
