netfilter: nft_connlimit: update the count if add was skipped (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12864,6 +12864,7 @@
 	patches.kernel.org/6.12.63-262-Reinstate-resource-avoid-unnecessary-lookups-.patch
 	patches.kernel.org/6.12.63-263-netfilter-flowtable-check-for-maximum-number-.patch
 	patches.kernel.org/6.12.63-264-netfilter-nf_conncount-rework-API-to-use-sk_b.patch
+	patches.kernel.org/6.12.63-265-netfilter-nft_connlimit-update-the-count-if-a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
