--- a/series.conf
+++ b/series.conf
@@ -12653,6 +12653,7 @@
 	patches.kernel.org/6.12.63-051-arm64-dts-imx8mm-venice-gw72xx-remove-unused-.patch
 	patches.kernel.org/6.12.63-052-arm64-dts-imx8mp-venice-gw702x-remove-off-boa.patch
 	patches.kernel.org/6.12.63-053-arm64-dts-imx8mp-venice-gw702x-remove-off-boa.patch
+	patches.kernel.org/6.12.63-054-perf-annotate-Check-return-value-of-evsel__ge.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
