smack: fix bug: invalid label of unix socket file (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12604,6 +12604,7 @@
 	patches.kernel.org/6.12.63-002-smack-fix-bug-SMACK64TRANSMUTE-set-on-non-dir.patch
 	patches.kernel.org/6.12.63-003-smack-deduplicate-xattr-setting-in-smack_inod.patch
 	patches.kernel.org/6.12.63-004-smack-always-instantiate-inode-in-smack_inode.patch
+	patches.kernel.org/6.12.63-005-smack-fix-bug-invalid-label-of-unix-socket-fi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
