spi: ch341: fix out-of-bounds memory access in ch341_transfer_one (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12867,6 +12867,7 @@
 	patches.kernel.org/6.12.63-265-netfilter-nft_connlimit-update-the-count-if-a.patch
 	patches.kernel.org/6.12.63-266-net-stmmac-fix-rx-limit-check-in-stmmac_rx_zc.patch
 	patches.kernel.org/6.12.63-267-mtd-rawnand-renesas-Handle-devm_pm_runtime_en.patch
+	patches.kernel.org/6.12.63-268-spi-ch341-fix-out-of-bounds-memory-access-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
