--- a/series.conf
+++ b/series.conf
@@ -12675,6 +12675,7 @@
 	patches.kernel.org/6.12.63-073-arm64-dts-qcom-x1e80100-Add-missing-quirk-for.patch
 	patches.kernel.org/6.12.63-074-arm64-dts-qcom-sdm845-oneplus-Correct-gpio-us.patch
 	patches.kernel.org/6.12.63-075-arm64-dts-qcom-sm8650-set-ufs-as-dma-coherent.patch
+	patches.kernel.org/6.12.63-076-arm64-dts-qcom-qcm6490-shift-otter-Add-missin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
