selftests/bpf: skip test_perf_branches_hw() on unsupported platforms (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12805,6 +12805,7 @@
 	patches.kernel.org/6.12.63-203-usb-dwc2-fix-hang-during-shutdown-if-set-as-p.patch
 	patches.kernel.org/6.12.63-204-usb-dwc2-fix-hang-during-suspend-if-set-as-pe.patch
 	patches.kernel.org/6.12.63-205-usb-raw-gadget-cap-raw_io-transfer-length-to-.patch
+	patches.kernel.org/6.12.63-206-selftests-bpf-skip-test_perf_branches_hw-on-u.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
