coresight: etm4x: Extract the trace unit controlling (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12746,6 +12746,7 @@
 	patches.kernel.org/6.12.63-144-nbd-defer-config-unlock-in-nbd_genl_connect.patch
 	patches.kernel.org/6.12.63-145-coresight-Change-device-mode-to-atomic-type.patch
 	patches.kernel.org/6.12.63-146-coresight-etm4x-Correct-polling-IDLE-bit.patch
+	patches.kernel.org/6.12.63-147-coresight-etm4x-Extract-the-trace-unit-contro.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
