s390/ap: Don't leak debug feature files if AP instructions are not available (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12668,6 +12668,7 @@
 	patches.kernel.org/6.12.63-066-wifi-ath11k-fix-VHT-MCS-assignment.patch
 	patches.kernel.org/6.12.63-067-wifi-ath11k-fix-peer-HE-MCS-assignment.patch
 	patches.kernel.org/6.12.63-068-s390-smp-Fix-fallback-CPU-detection.patch
+	patches.kernel.org/6.12.63-069-s390-ap-Don-t-leak-debug-feature-files-if-AP-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
