RDMA/rxe: Fix null deref on srq->rq.queue after resize failure (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12678,6 +12678,7 @@
 	patches.kernel.org/6.12.63-076-arm64-dts-qcom-qcm6490-shift-otter-Add-missin.patch
 	patches.kernel.org/6.12.63-077-phy-mscc-Fix-PTP-for-VSC8574-and-VSC8572.patch
 	patches.kernel.org/6.12.63-078-sctp-Defer-SCTP_DBG_OBJCNT_DEC-to-sctp_destro.patch
+	patches.kernel.org/6.12.63-079-RDMA-rxe-Fix-null-deref-on-srq-rq.queue-after.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
