--- a/series.conf
+++ b/series.conf
@@ -12854,6 +12854,7 @@
 	patches.kernel.org/6.12.63-252-vdpa-pds-use-pe-for-ERR_PTR-in-event-handler-.patch
 	patches.kernel.org/6.12.63-253-ASoC-Intel-catpt-Fix-error-path-in-hw_params.patch
 	patches.kernel.org/6.12.63-254-spi-airoha-snfi-en7523-workaround-flash-damag.patch
+	patches.kernel.org/6.12.63-255-ARM-dts-samsung-universal_c210-turn-off-SDIO-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
