clk: qcom: camcc-sm7150: Fix PLL config of PLL2 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12660,6 +12660,7 @@
 	patches.kernel.org/6.12.63-058-clk-qcom-camcc-sm8550-Specify-Titan-GDSC-powe.patch
 	patches.kernel.org/6.12.63-059-clk-qcom-camcc-sm6350-Specify-Titan-GDSC-powe.patch
 	patches.kernel.org/6.12.63-060-clk-qcom-camcc-sm6350-Fix-PLL-config-of-PLL2.patch
+	patches.kernel.org/6.12.63-061-clk-qcom-camcc-sm7150-Fix-PLL-config-of-PLL2.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
