phy: mscc: Fix PTP for VSC8574 and VSC8572 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12676,6 +12676,7 @@
 	patches.kernel.org/6.12.63-074-arm64-dts-qcom-sdm845-oneplus-Correct-gpio-us.patch
 	patches.kernel.org/6.12.63-075-arm64-dts-qcom-sm8650-set-ufs-as-dma-coherent.patch
 	patches.kernel.org/6.12.63-076-arm64-dts-qcom-qcm6490-shift-otter-Add-missin.patch
+	patches.kernel.org/6.12.63-077-phy-mscc-Fix-PTP-for-VSC8574-and-VSC8572.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
