--- a/series.conf
+++ b/series.conf
@@ -12885,6 +12885,7 @@
 	patches.kernel.org/6.12.63-283-perf-tools-Mark-split-kallsyms-DSOs-as-loaded.patch
 	patches.kernel.org/6.12.63-284-perf-tools-Fix-split-kallsyms-DSO-counting.patch
 	patches.kernel.org/6.12.63-285-perf-hist-In-init-ensure-mem_info-is-put-on-e.patch
+	patches.kernel.org/6.12.63-286-pinctrl-single-Fix-incorrect-type-for-error-r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
