--- a/series.conf
+++ b/series.conf
@@ -12832,6 +12832,7 @@
 	patches.kernel.org/6.12.63-230-RDMA-irdma-Fix-data-race-in-irdma_free_pble.patch
 	patches.kernel.org/6.12.63-231-RDMA-irdma-Do-not-directly-rely-on-IB_PD_UNSA.patch
 	patches.kernel.org/6.12.63-232-drm-panthor-Avoid-adding-of-kernel-BOs-to-ext.patch
+	patches.kernel.org/6.12.63-233-ASoC-nau8325-use-simple-i2c-probe-function.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
