drm/imagination: Fix reference to devm_platform_get_and_ioremap_resource() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12699,6 +12699,7 @@
 	patches.kernel.org/6.12.63-097-interconnect-qcom-msm8996-add-missing-link-to.patch
 	patches.kernel.org/6.12.63-098-arm64-dts-qcom-msm8996-add-interconnect-paths.patch
 	patches.kernel.org/6.12.63-099-interconnect-debugfs-Fix-incorrect-error-hand.patch
+	patches.kernel.org/6.12.63-100-drm-imagination-Fix-reference-to-devm_platfor.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
