--- a/series.conf
+++ b/series.conf
@@ -12719,6 +12719,7 @@
 	patches.kernel.org/6.12.63-117-spi-tegra210-quad-Fix-timeout-handling.patch
 	patches.kernel.org/6.12.63-118-libbpf-Fix-parsing-of-multi-split-BTF.patch
 	patches.kernel.org/6.12.63-119-ARM-dts-am335x-netcom-plus-2xx-add-missing-GP.patch
+	patches.kernel.org/6.12.63-120-ARM-dts-omap3-beagle-xm-Correct-obsolete-TWL4.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
