RDMA/irdma: Fix data race in irdma_free_pble (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12829,6 +12829,7 @@
 	patches.kernel.org/6.12.63-227-backlight-lp855x-Fix-lp855x.h-kernel-doc-warn.patch
 	patches.kernel.org/6.12.63-228-iommu-arm-smmu-qcom-Enable-use-of-all-SMR-gro.patch
 	patches.kernel.org/6.12.63-229-RDMA-irdma-Fix-data-race-in-irdma_sc_ccq_arm.patch
+	patches.kernel.org/6.12.63-230-RDMA-irdma-Fix-data-race-in-irdma_free_pble.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
