smack: deduplicate xattr setting in smack_inode_init_security() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12602,6 +12602,7 @@
 	patches.kernel.org/6.12.62-050-Linux-6.12.62.patch
 	patches.kernel.org/6.12.63-001-smack-deduplicate-does-access-rule-request-tr.patch
 	patches.kernel.org/6.12.63-002-smack-fix-bug-SMACK64TRANSMUTE-set-on-non-dir.patch
+	patches.kernel.org/6.12.63-003-smack-deduplicate-xattr-setting-in-smack_inod.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
