inet: Avoid ehash lookup race in inet_twsk_hashdance_schedule() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12644,6 +12644,7 @@
 	patches.kernel.org/6.12.63-042-clk-qcom-gcc-x1e80100-Add-missing-USB4-clocks.patch
 	patches.kernel.org/6.12.63-043-rculist-Add-hlist_nulls_replace_rcu-and-hlist.patch
 	patches.kernel.org/6.12.63-044-inet-Avoid-ehash-lookup-race-in-inet_ehash_in.patch
+	patches.kernel.org/6.12.63-045-inet-Avoid-ehash-lookup-race-in-inet_twsk_has.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
