--- a/series.conf
+++ b/series.conf
@@ -12801,6 +12801,7 @@
 	patches.kernel.org/6.12.63-199-RAS-Report-all-ARM-processor-CPER-information.patch
 	patches.kernel.org/6.12.63-200-ima-Handle-error-code-returned-by-ima_filter_.patch
 	patches.kernel.org/6.12.63-201-usb-chaoskey-fix-locking-for-O_NONBLOCK.patch
+	patches.kernel.org/6.12.63-202-usb-dwc2-disable-platform-lowlevel-hw-resourc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
