locktorture: Fix memory leak in param_set_cpumask() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12723,6 +12723,7 @@
 	patches.kernel.org/6.12.63-121-ARM-dts-omap3-n900-Correct-obsolete-TWL4030-p.patch
 	patches.kernel.org/6.12.63-122-x86-boot-Fix-page-table-access-in-5-level-to-.patch
 	patches.kernel.org/6.12.63-123-efi-libstub-Fix-page-table-access-in-5-level-.patch
+	patches.kernel.org/6.12.63-124-locktorture-Fix-memory-leak-in-param_set_cpum.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
