--- a/series.conf
+++ b/series.conf
@@ -12920,6 +12920,7 @@
 	patches.kernel.org/6.12.63-318-blk-mq-Abort-suspend-when-wakeup-events-are-p.patch
 	patches.kernel.org/6.12.63-319-block-fix-comment-for-op_is_zone_mgmt-to-incl.patch
 	patches.kernel.org/6.12.63-320-block-fix-memory-leak-in-__blkdev_issue_zero_.patch
+	patches.kernel.org/6.12.63-321-nvme-auth-use-kvfree-for-memory-allocated-wit.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
