--- a/series.conf
+++ b/series.conf
@@ -12743,6 +12743,7 @@
 	patches.kernel.org/6.12.63-141-powerpc-32-Fix-unpaired-stwcx.-on-interrupt-e.patch
 	patches.kernel.org/6.12.63-142-macintosh-mac_hid-fix-race-condition-in-mac_h.patch
 	patches.kernel.org/6.12.63-143-wifi-cw1200-Fix-potential-memory-leak-in-cw12.patch
+	patches.kernel.org/6.12.63-144-nbd-defer-config-unlock-in-nbd_genl_connect.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
