wifi: mac80211: fix CMAC functions not handling errors (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12787,6 +12787,7 @@
 	patches.kernel.org/6.12.63-185-pwm-bcm2835-Make-sure-the-channel-is-enabled-.patch
 	patches.kernel.org/6.12.63-186-scsi-qla2xxx-Fix-improper-freeing-of-purex-it.patch
 	patches.kernel.org/6.12.63-187-iommu-vt-d-Fix-unused-invalidation-hint-in-qi.patch
+	patches.kernel.org/6.12.63-188-wifi-mac80211-fix-CMAC-functions-not-handling.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
