power: supply: rt9467: Return error on failure in rt9467_set_value_from_ranges() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12705,6 +12705,7 @@
 	patches.kernel.org/6.12.63-103-power-supply-rt5033_charger-Fix-device-node-r.patch
 	patches.kernel.org/6.12.63-104-power-supply-cw2015-Check-devm_delayed_work_a.patch
 	patches.kernel.org/6.12.63-105-power-supply-max17040-Check-iio_read_channel_.patch
+	patches.kernel.org/6.12.63-106-power-supply-rt9467-Return-error-on-failure-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
