--- a/series.conf
+++ b/series.conf
@@ -12866,6 +12866,7 @@
 	patches.kernel.org/6.12.63-264-netfilter-nf_conncount-rework-API-to-use-sk_b.patch
 	patches.kernel.org/6.12.63-265-netfilter-nft_connlimit-update-the-count-if-a.patch
 	patches.kernel.org/6.12.63-266-net-stmmac-fix-rx-limit-check-in-stmmac_rx_zc.patch
+	patches.kernel.org/6.12.63-267-mtd-rawnand-renesas-Handle-devm_pm_runtime_en.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
