ima: Handle error code returned by ima_filter_rule_match() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12799,6 +12799,7 @@
 	patches.kernel.org/6.12.63-197-cpuset-Treat-cpusets-in-attaching-as-populate.patch
 	patches.kernel.org/6.12.63-198-wifi-rtl818x-rtl8187-Fix-potential-buffer-und.patch
 	patches.kernel.org/6.12.63-199-RAS-Report-all-ARM-processor-CPER-information.patch
+	patches.kernel.org/6.12.63-200-ima-Handle-error-code-returned-by-ima_filter_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
