--- a/series.conf
+++ b/series.conf
@@ -12707,6 +12707,7 @@
 	patches.kernel.org/6.12.63-105-power-supply-max17040-Check-iio_read_channel_.patch
 	patches.kernel.org/6.12.63-106-power-supply-rt9467-Return-error-on-failure-i.patch
 	patches.kernel.org/6.12.63-107-power-supply-rt9467-Prevent-using-uninitializ.patch
+	patches.kernel.org/6.12.63-108-power-supply-wm831x-Check-wm831x_set_bits-ret.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
