NFSD/blocklayout: Fix minlength check in proc_layoutget (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12768,6 +12768,7 @@
 	patches.kernel.org/6.12.63-166-watchdog-wdat_wdt-Fix-ACPI-table-leak-in-prob.patch
 	patches.kernel.org/6.12.63-167-watchdog-starfive-Fix-resource-leak-in-probe-.patch
 	patches.kernel.org/6.12.63-168-tracefs-fix-a-leak-in-eventfs_create_events_d.patch
+	patches.kernel.org/6.12.63-169-NFSD-blocklayout-Fix-minlength-check-in-proc_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
