NFS: Initialise verifiers for visible dentries in _nfs4_open_and_get_state (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12904,6 +12904,7 @@
 	patches.kernel.org/6.12.63-302-NFS-Initialise-verifiers-for-visible-dentries.patch
 	patches.kernel.org/6.12.63-303-NFS-Initialise-verifiers-for-visible-dentries.patch
 	patches.kernel.org/6.12.63-304-nfs-vfs-discard-d_exact_alias.patch
+	patches.kernel.org/6.12.63-305-NFS-Initialise-verifiers-for-visible-dentries.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
