--- a/series.conf
+++ b/series.conf
@@ -12843,6 +12843,7 @@
 	patches.kernel.org/6.12.63-241-ACPI-processor_core-fix-map_x2apic_id-for-amd.patch
 	patches.kernel.org/6.12.63-242-ublk-prevent-invalid-access-with-DEBUG.patch
 	patches.kernel.org/6.12.63-243-ext4-improve-integrity-checking-in-__mb_check.patch
+	patches.kernel.org/6.12.63-244-of-Skip-devicetree-kunit-tests-when-RISCV-ACP.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
