net: dst: introduce dst->dev_rcu (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12945,6 +12945,7 @@
 	patches.kernel.org/6.12.63-343-ocfs2-fix-memory-leak-in-ocfs2_merge_rec_left.patch
 	patches.kernel.org/6.12.63-344-LoongArch-Add-machine_kexec_mask_interrupts-i.patch
 	patches.kernel.org/6.12.63-345-net-lan743x-Allocate-rings-outside-ZONE_DMA.patch
+	patches.kernel.org/6.12.63-346-net-dst-introduce-dst-dev_rcu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
