backlight: led-bl: Add devlink to supplier LEDs (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12825,6 +12825,7 @@
 	patches.kernel.org/6.12.63-223-iomap-factor-out-a-iomap_dio_done-helper.patch
 	patches.kernel.org/6.12.63-224-iomap-always-run-error-completions-in-user-co.patch
 	patches.kernel.org/6.12.63-225-wifi-ieee80211-correct-FILS-status-codes.patch
+	patches.kernel.org/6.12.63-226-backlight-led-bl-Add-devlink-to-supplier-LEDs.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
