i3c: master: svc: Prevent incomplete IBI transaction (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12694,6 +12694,7 @@
 	patches.kernel.org/6.12.63-092-soc-qcom-smem-fix-hwspinlock-resource-leak-in.patch
 	patches.kernel.org/6.12.63-093-pinctrl-stm32-fix-hwspinlock-resource-leak-in.patch
 	patches.kernel.org/6.12.63-094-i3c-fix-refcount-inconsistency-in-i3c_master_.patch
+	patches.kernel.org/6.12.63-095-i3c-master-svc-Prevent-incomplete-IBI-transac.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
