--- a/series.conf
+++ b/series.conf
@@ -12737,6 +12737,7 @@
 	patches.kernel.org/6.12.63-135-ARM-dts-stm32-stm32mp157c-phycore-Fix-STMPE81.patch
 	patches.kernel.org/6.12.63-136-ntfs3-init-run-lock-for-extend-inode.patch
 	patches.kernel.org/6.12.63-137-drm-panthor-Fix-potential-memleak-of-vma-stru.patch
+	patches.kernel.org/6.12.63-138-scsi-ufs-core-fix-incorrect-buffer-duplicatio.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
