--- a/series.conf
+++ b/series.conf
@@ -12623,6 +12623,7 @@
 	patches.kernel.org/6.12.63-021-drm-atmel-hlcdc-fix-atmel_xlcdc_plane_setup_s.patch
 	patches.kernel.org/6.12.63-022-HID-logitech-hidpp-Do-not-assume-FAP-in-hidpp.patch
 	patches.kernel.org/6.12.63-023-objtool-Fix-standalone-hacks-jump_label.patch
+	patches.kernel.org/6.12.63-024-objtool-Fix-weak-symbol-detection.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
