sctp: Defer SCTP_DBG_OBJCNT_DEC() to sctp_destroy_sock() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12677,6 +12677,7 @@
 	patches.kernel.org/6.12.63-075-arm64-dts-qcom-sm8650-set-ufs-as-dma-coherent.patch
 	patches.kernel.org/6.12.63-076-arm64-dts-qcom-qcm6490-shift-otter-Add-missin.patch
 	patches.kernel.org/6.12.63-077-phy-mscc-Fix-PTP-for-VSC8574-and-VSC8572.patch
+	patches.kernel.org/6.12.63-078-sctp-Defer-SCTP_DBG_OBJCNT_DEC-to-sctp_destro.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
