vdpa/pds: use %pe for ERR_PTR() in event handler registration (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12851,6 +12851,7 @@
 	patches.kernel.org/6.12.63-249-virtio-fix-virtqueue_set_affinity-docs.patch
 	patches.kernel.org/6.12.63-250-vdpa-mlx5-Fix-incorrect-error-code-reporting-.patch
 	patches.kernel.org/6.12.63-251-vhost-Fix-kthread-worker-cgroup-failure-handl.patch
+	patches.kernel.org/6.12.63-252-vdpa-pds-use-pe-for-ERR_PTR-in-event-handler-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
