--- a/series.conf
+++ b/series.conf
@@ -12892,6 +12892,7 @@
 	patches.kernel.org/6.12.63-290-platform-x86-intel-pmc-Update-Arrow-Lake-tele.patch
 	patches.kernel.org/6.12.63-291-f2fs-keep-POSIX_FADV_NOREUSE-ranges.patch
 	patches.kernel.org/6.12.63-292-f2fs-add-a-sysfs-entry-to-reclaim-POSIX_FADV_.patch
+	patches.kernel.org/6.12.63-293-f2fs-fix-to-avoid-running-out-of-free-segment.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
