dm-raid: fix possible NULL dereference with undefined raid type (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12935,6 +12935,7 @@
 	patches.kernel.org/6.12.63-333-ARM-9464-1-fix-input-only-operand-modificatio.patch
 	patches.kernel.org/6.12.63-334-block-Use-RCU-in-blk_mq_-un-quiesce_tagset-in.patch
 	patches.kernel.org/6.12.63-335-block-return-unsigned-int-from-queue_dma_alig.patch
+	patches.kernel.org/6.12.63-336-dm-raid-fix-possible-NULL-dereference-with-un.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
