--- a/series.conf
+++ b/series.conf
@@ -12876,6 +12876,7 @@
 	patches.kernel.org/6.12.63-274-remoteproc-qcom_q6v5_wcss-fix-parsing-of-qcom.patch
 	patches.kernel.org/6.12.63-275-md-raid5-fix-IO-hang-when-array-is-broken-wit.patch
 	patches.kernel.org/6.12.63-276-clk-keystone-fix-compile-testing.patch
+	patches.kernel.org/6.12.63-277-net-hsr-remove-one-synchronize_rcu-from-hsr_d.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
