--- a/series.conf
+++ b/series.conf
@@ -12828,6 +12828,7 @@
 	patches.kernel.org/6.12.63-226-backlight-led-bl-Add-devlink-to-supplier-LEDs.patch
 	patches.kernel.org/6.12.63-227-backlight-lp855x-Fix-lp855x.h-kernel-doc-warn.patch
 	patches.kernel.org/6.12.63-228-iommu-arm-smmu-qcom-Enable-use-of-all-SMR-gro.patch
+	patches.kernel.org/6.12.63-229-RDMA-irdma-Fix-data-race-in-irdma_sc_ccq_arm.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
