--- a/series.conf
+++ b/series.conf
@@ -12934,6 +12934,7 @@
 	patches.kernel.org/6.12.63-332-ALSA-firewire-motu-add-bounds-check-in-put_us.patch
 	patches.kernel.org/6.12.63-333-ARM-9464-1-fix-input-only-operand-modificatio.patch
 	patches.kernel.org/6.12.63-334-block-Use-RCU-in-blk_mq_-un-quiesce_tagset-in.patch
+	patches.kernel.org/6.12.63-335-block-return-unsigned-int-from-queue_dma_alig.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
