net: hsr: remove synchronize_rcu() from hsr_add_port() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12877,6 +12877,7 @@
 	patches.kernel.org/6.12.63-275-md-raid5-fix-IO-hang-when-array-is-broken-wit.patch
 	patches.kernel.org/6.12.63-276-clk-keystone-fix-compile-testing.patch
 	patches.kernel.org/6.12.63-277-net-hsr-remove-one-synchronize_rcu-from-hsr_d.patch
+	patches.kernel.org/6.12.63-278-net-hsr-remove-synchronize_rcu-from-hsr_add_p.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
