--- a/series.conf
+++ b/series.conf
@@ -12642,6 +12642,7 @@
 	patches.kernel.org/6.12.63-040-dt-bindings-clock-qcom-x1e80100-gcc-Add-missi.patch
 	patches.kernel.org/6.12.63-041-dt-bindings-clock-qcom-x1e80100-gcc-Add-missi.patch
 	patches.kernel.org/6.12.63-042-clk-qcom-gcc-x1e80100-Add-missing-USB4-clocks.patch
+	patches.kernel.org/6.12.63-043-rculist-Add-hlist_nulls_replace_rcu-and-hlist.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
