--- a/series.conf
+++ b/series.conf
@@ -12608,6 +12608,7 @@
 	patches.kernel.org/6.12.63-006-smack-fix-bug-unprivileged-task-can-create-la.patch
 	patches.kernel.org/6.12.63-007-smack-fix-bug-setting-task-label-silently-ign.patch
 	patches.kernel.org/6.12.63-008-gpu-host1x-Fix-race-in-syncpt-alloc-free.patch
+	patches.kernel.org/6.12.63-009-accel-ivpu-Prevent-runtime-suspend-during-con.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
