--- a/series.conf
+++ b/series.conf
@@ -12952,6 +12952,7 @@
 	patches.kernel.org/6.12.63-350-usb-dwc3-dwc3_power_off_all_roothub_ports-Use.patch
 	patches.kernel.org/6.12.63-351-ALSA-dice-fix-buffer-overflow-in-detect_strea.patch
 	patches.kernel.org/6.12.63-352-ALSA-wavefront-Fix-integer-overflow-in-sample.patch
+	patches.kernel.org/6.12.63-353-ASoC-codecs-nau8325-Silence-uninitialized-var.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
