irqchip/irq-bcm7038-l1: Fix section mismatch (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12629,6 +12629,7 @@
 	patches.kernel.org/6.12.63-027-wifi-ath10k-move-recovery-check-logic-into-a-.patch
 	patches.kernel.org/6.12.63-028-wifi-ath11k-restore-register-window-after-glo.patch
 	patches.kernel.org/6.12.63-029-sched-fair-Forfeit-vruntime-on-yield.patch
+	patches.kernel.org/6.12.63-030-irqchip-irq-bcm7038-l1-Fix-section-mismatch.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
