spi: tegra210-quad: Fix timeout handling (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12716,6 +12716,7 @@
 	patches.kernel.org/6.12.63-114-drm-panthor-Fix-UAF-race-between-device-unplu.patch
 	patches.kernel.org/6.12.63-115-drm-panthor-Fix-race-with-suspend-during-unpl.patch
 	patches.kernel.org/6.12.63-116-drm-panthor-Fix-UAF-on-kernel-BO-VA-nodes.patch
+	patches.kernel.org/6.12.63-117-spi-tegra210-quad-Fix-timeout-handling.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
