--- a/series.conf
+++ b/series.conf
@@ -12614,6 +12614,7 @@
 	patches.kernel.org/6.12.63-012-accel-ivpu-Make-function-parameter-names-cons.patch
 	patches.kernel.org/6.12.63-013-accel-ivpu-Fix-DCT-active-percent-format.patch
 	patches.kernel.org/6.12.63-014-drm-vgem-fence-Fix-potential-deadlock-on-rele.patch
+	patches.kernel.org/6.12.63-015-USB-Fix-descriptor-count-when-handling-invali.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
