regulator: fixed: Rely on the core freeing the enable GPIO (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12922,6 +12922,7 @@
 	patches.kernel.org/6.12.63-320-block-fix-memory-leak-in-__blkdev_issue_zero_.patch
 	patches.kernel.org/6.12.63-321-nvme-auth-use-kvfree-for-memory-allocated-wit.patch
 	patches.kernel.org/6.12.63-322-drm-plane-Fix-IS_ERR-vs-NULL-check-in-drm_pla.patch
+	patches.kernel.org/6.12.63-323-regulator-fixed-Rely-on-the-core-freeing-the-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
