--- a/series.conf
+++ b/series.conf
@@ -12925,6 +12925,7 @@
 	patches.kernel.org/6.12.63-323-regulator-fixed-Rely-on-the-core-freeing-the-.patch
 	patches.kernel.org/6.12.63-324-ALSA-firewire-motu-fix-buffer-overflow-in-hwd.patch
 	patches.kernel.org/6.12.63-325-drm-nouveau-refactor-deprecated-strcpy.patch
+	patches.kernel.org/6.12.63-326-cifs-Fix-handling-of-a-beyond-EOF-DIO-unbuffe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
