--- a/series.conf
+++ b/series.conf
@@ -12932,6 +12932,7 @@
 	patches.kernel.org/6.12.63-330-drm-amdkfd-Use-huge-page-size-to-check-split-.patch
 	patches.kernel.org/6.12.63-331-rtc-gamecube-Check-the-return-value-of-iorema.patch
 	patches.kernel.org/6.12.63-332-ALSA-firewire-motu-add-bounds-check-in-put_us.patch
+	patches.kernel.org/6.12.63-333-ARM-9464-1-fix-input-only-operand-modificatio.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
