--- a/series.conf
+++ b/series.conf
@@ -12910,6 +12910,7 @@
 	patches.kernel.org/6.12.63-308-Revert-nfs-clear-SB_RDONLY-before-getting-sup.patch
 	patches.kernel.org/6.12.63-309-Revert-nfs-ignore-SB_RDONLY-when-mounting-nfs.patch
 	patches.kernel.org/6.12.63-310-NFS-Automounted-filesystems-should-inherit-ro.patch
+	patches.kernel.org/6.12.63-311-Expand-the-type-of-nfs_fattr-valid.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
