--- a/series.conf
+++ b/series.conf
@@ -12896,6 +12896,7 @@
 	patches.kernel.org/6.12.63-294-f2fs-add-carve_out-sysfs-node.patch
 	patches.kernel.org/6.12.63-295-f2fs-sysfs-add-encoding_flags-entry.patch
 	patches.kernel.org/6.12.63-296-f2fs-introduce-reserved_pin_section-sysfs-ent.patch
+	patches.kernel.org/6.12.63-297-f2fs-add-gc_boost_gc_multiple-sysfs-node.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
