efi/cper: Adjust infopfx size to accept an extra space (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12938,6 +12938,7 @@
 	patches.kernel.org/6.12.63-336-dm-raid-fix-possible-NULL-dereference-with-un.patch
 	patches.kernel.org/6.12.63-337-dm-log-writes-Add-missing-set_freezable-for-f.patch
 	patches.kernel.org/6.12.63-338-efi-cper-Add-a-new-helper-function-to-print-b.patch
+	patches.kernel.org/6.12.63-339-efi-cper-Adjust-infopfx-size-to-accept-an-ext.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
