--- a/series.conf
+++ b/series.conf
@@ -12936,6 +12936,7 @@
 	patches.kernel.org/6.12.63-334-block-Use-RCU-in-blk_mq_-un-quiesce_tagset-in.patch
 	patches.kernel.org/6.12.63-335-block-return-unsigned-int-from-queue_dma_alig.patch
 	patches.kernel.org/6.12.63-336-dm-raid-fix-possible-NULL-dereference-with-un.patch
+	patches.kernel.org/6.12.63-337-dm-log-writes-Add-missing-set_freezable-for-f.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
