drm/nouveau: restrict the flush page to a 32-bit address (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12820,6 +12820,7 @@
 	patches.kernel.org/6.12.63-218-iommu-arm-smmu-v3-Fix-error-check-in-arm_smmu.patch
 	patches.kernel.org/6.12.63-219-btrfs-fix-leaf-leak-in-an-error-path-in-btrfs.patch
 	patches.kernel.org/6.12.63-220-PCI-dwc-Fix-wrong-PORT_LOGIC_LTSSM_STATE_MASK.patch
+	patches.kernel.org/6.12.63-221-drm-nouveau-restrict-the-flush-page-to-a-32-b.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
