--- a/series.conf
+++ b/series.conf
@@ -12739,6 +12739,7 @@
 	patches.kernel.org/6.12.63-137-drm-panthor-Fix-potential-memleak-of-vma-stru.patch
 	patches.kernel.org/6.12.63-138-scsi-ufs-core-fix-incorrect-buffer-duplicatio.patch
 	patches.kernel.org/6.12.63-139-cpufreq-amd-pstate-Call-cppc_set_auto_sel-onl.patch
+	patches.kernel.org/6.12.63-140-powerpc-kdump-Fix-size-calculation-for-hot-re.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
