--- a/series.conf
+++ b/series.conf
@@ -12833,6 +12833,7 @@
 	patches.kernel.org/6.12.63-231-RDMA-irdma-Do-not-directly-rely-on-IB_PD_UNSA.patch
 	patches.kernel.org/6.12.63-232-drm-panthor-Avoid-adding-of-kernel-BOs-to-ext.patch
 	patches.kernel.org/6.12.63-233-ASoC-nau8325-use-simple-i2c-probe-function.patch
+	patches.kernel.org/6.12.63-234-ASoC-nau8325-add-missing-build-config.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
