--- a/series.conf
+++ b/series.conf
@@ -12710,6 +12710,7 @@
 	patches.kernel.org/6.12.63-108-power-supply-wm831x-Check-wm831x_set_bits-ret.patch
 	patches.kernel.org/6.12.63-109-power-supply-apm_power-only-unset-own-apm_get.patch
 	patches.kernel.org/6.12.63-110-scsi-target-Do-not-write-NUL-characters-into-.patch
+	patches.kernel.org/6.12.63-111-fs-9p-Don-t-open-remote-file-with-APPEND-mode.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
