--- a/series.conf
+++ b/series.conf
@@ -12628,6 +12628,7 @@
 	patches.kernel.org/6.12.63-026-wifi-ath10k-Add-missing-include-of-export.h.patch
 	patches.kernel.org/6.12.63-027-wifi-ath10k-move-recovery-check-logic-into-a-.patch
 	patches.kernel.org/6.12.63-028-wifi-ath11k-restore-register-window-after-glo.patch
+	patches.kernel.org/6.12.63-029-sched-fair-Forfeit-vruntime-on-yield.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
