crypto: iaa - Fix incorrect return value in save_iaa_wq() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12759,6 +12759,7 @@
 	patches.kernel.org/6.12.63-157-arm64-dts-rockchip-Move-the-EEPROM-to-correct.patch
 	patches.kernel.org/6.12.63-158-arm64-dts-rockchip-Add-eeprom-vcc-supply-for-.patch
 	patches.kernel.org/6.12.63-159-arm64-dts-rockchip-Add-eeprom-vcc-supply-for-.patch
+	patches.kernel.org/6.12.63-160-crypto-iaa-Fix-incorrect-return-value-in-save.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
