drm/panthor: Fix UAF race between device unplug and FW event processing (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12713,6 +12713,7 @@
 	patches.kernel.org/6.12.63-111-fs-9p-Don-t-open-remote-file-with-APPEND-mode.patch
 	patches.kernel.org/6.12.63-112-drm-panthor-Handle-errors-returned-by-drm_sch.patch
 	patches.kernel.org/6.12.63-113-drm-panthor-Fix-group_free_queue-for-partiall.patch
+	patches.kernel.org/6.12.63-114-drm-panthor-Fix-UAF-race-between-device-unplu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
