gpu: host1x: Fix race in syncpt alloc/free (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12607,6 +12607,7 @@
 	patches.kernel.org/6.12.63-005-smack-fix-bug-invalid-label-of-unix-socket-fi.patch
 	patches.kernel.org/6.12.63-006-smack-fix-bug-unprivileged-task-can-create-la.patch
 	patches.kernel.org/6.12.63-007-smack-fix-bug-setting-task-label-silently-ign.patch
+	patches.kernel.org/6.12.63-008-gpu-host1x-Fix-race-in-syncpt-alloc-free.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
