--- a/series.conf
+++ b/series.conf
@@ -12948,6 +12948,7 @@
 	patches.kernel.org/6.12.63-346-net-dst-introduce-dst-dev_rcu.patch
 	patches.kernel.org/6.12.63-347-tcp_metrics-use-dst_dev_net_rcu.patch
 	patches.kernel.org/6.12.63-348-usb-gadget-tegra-xudc-Always-reinitialize-dat.patch
+	patches.kernel.org/6.12.63-349-usb-phy-Initialize-struct-usb_phy-list_head.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
