coresight: etm4x: Correct polling IDLE bit (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12745,6 +12745,7 @@
 	patches.kernel.org/6.12.63-143-wifi-cw1200-Fix-potential-memory-leak-in-cw12.patch
 	patches.kernel.org/6.12.63-144-nbd-defer-config-unlock-in-nbd_genl_connect.patch
 	patches.kernel.org/6.12.63-145-coresight-Change-device-mode-to-atomic-type.patch
+	patches.kernel.org/6.12.63-146-coresight-etm4x-Correct-polling-IDLE-bit.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
