bpf: Handle return value of ftrace_set_filter_ip in register_fentry (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12762,6 +12762,7 @@
 	patches.kernel.org/6.12.63-160-crypto-iaa-Fix-incorrect-return-value-in-save.patch
 	patches.kernel.org/6.12.63-161-drm-msm-dpu-drop-dpu_hw_dsc_destroy-prototype.patch
 	patches.kernel.org/6.12.63-162-ps3disk-use-memcpy_-from-to-_bvec-index.patch
+	patches.kernel.org/6.12.63-163-bpf-Handle-return-value-of-ftrace_set_filter_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
