clk: qcom: gcc-x1e80100: Add missing USB4 clocks/resets (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12641,6 +12641,7 @@
 	patches.kernel.org/6.12.63-039-ntfs3-Fix-uninit-buffer-allocated-by-__getnam.patch
 	patches.kernel.org/6.12.63-040-dt-bindings-clock-qcom-x1e80100-gcc-Add-missi.patch
 	patches.kernel.org/6.12.63-041-dt-bindings-clock-qcom-x1e80100-gcc-Add-missi.patch
+	patches.kernel.org/6.12.63-042-clk-qcom-gcc-x1e80100-Add-missing-USB4-clocks.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
