PCI: dwc: Fix wrong PORT_LOGIC_LTSSM_STATE_MASK definition (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12819,6 +12819,7 @@
 	patches.kernel.org/6.12.63-217-staging-fbtft-core-fix-potential-memory-leak-.patch
 	patches.kernel.org/6.12.63-218-iommu-arm-smmu-v3-Fix-error-check-in-arm_smmu.patch
 	patches.kernel.org/6.12.63-219-btrfs-fix-leaf-leak-in-an-error-path-in-btrfs.patch
+	patches.kernel.org/6.12.63-220-PCI-dwc-Fix-wrong-PORT_LOGIC_LTSSM_STATE_MASK.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
