--- a/series.conf
+++ b/series.conf
@@ -12814,6 +12814,7 @@
 	patches.kernel.org/6.12.63-212-RDMA-bnxt_re-Fix-the-inline-size-for-GenP7-de.patch
 	patches.kernel.org/6.12.63-213-RDMA-bnxt_re-Pass-correct-flag-for-dma-mr-cre.patch
 	patches.kernel.org/6.12.63-214-ASoC-tas2781-correct-the-wrong-period.patch
+	patches.kernel.org/6.12.63-215-mt76-mt7615-Fix-memory-leak-in-mt7615_mcu_wtb.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
