drm/mediatek: Fix CCORR mtk_ctm_s31_32_to_s1_n function issue (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12777,6 +12777,7 @@
 	patches.kernel.org/6.12.63-175-powerpc-64s-ptdump-Fix-kernel_hash_pagetable-.patch
 	patches.kernel.org/6.12.63-176-fs-ntfs3-out1-also-needs-to-put-mi.patch
 	patches.kernel.org/6.12.63-177-fs-ntfs3-Prevent-memory-leaks-in-add-sub-reco.patch
+	patches.kernel.org/6.12.63-178-drm-mediatek-Fix-CCORR-mtk_ctm_s31_32_to_s1_n.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
