x86/dumpstack: Prevent KASAN false positive warnings in __show_regs() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12689,6 +12689,7 @@
 	patches.kernel.org/6.12.63-087-bpf-Fix-stackmap-overflow-check-in-__bpf_get_.patch
 	patches.kernel.org/6.12.63-088-perf-x86-intel-cstate-Remove-PC3-support-from.patch
 	patches.kernel.org/6.12.63-089-task_work-Fix-NMI-race-condition.patch
+	patches.kernel.org/6.12.63-090-x86-dumpstack-Prevent-KASAN-false-positive-wa.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
