--- a/series.conf
+++ b/series.conf
@@ -12630,6 +12630,7 @@
 	patches.kernel.org/6.12.63-028-wifi-ath11k-restore-register-window-after-glo.patch
 	patches.kernel.org/6.12.63-029-sched-fair-Forfeit-vruntime-on-yield.patch
 	patches.kernel.org/6.12.63-030-irqchip-irq-bcm7038-l1-Fix-section-mismatch.patch
+	patches.kernel.org/6.12.63-031-irqchip-irq-bcm7120-l2-Fix-section-mismatch.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
