--- a/series.conf
+++ b/series.conf
@@ -12764,6 +12764,7 @@
 	patches.kernel.org/6.12.63-162-ps3disk-use-memcpy_-from-to-_bvec-index.patch
 	patches.kernel.org/6.12.63-163-bpf-Handle-return-value-of-ftrace_set_filter_.patch
 	patches.kernel.org/6.12.63-164-selftests-bpf-Fix-failure-paths-in-send_signa.patch
+	patches.kernel.org/6.12.63-165-bpf-Check-skb-transport_header-is-set-in-bpf_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
