--- a/series.conf
+++ b/series.conf
@@ -12752,6 +12752,7 @@
 	patches.kernel.org/6.12.63-150-lib-vsprintf-Check-pointer-before-dereferenci.patch
 	patches.kernel.org/6.12.63-151-ocfs2-relax-BUG-to-ocfs2_error-in-__ocfs2_mov.patch
 	patches.kernel.org/6.12.63-152-ACPI-property-Fix-fwnode-refcount-leak-in-acp.patch
+	patches.kernel.org/6.12.63-153-scsi-sim710-Fix-resource-leak-by-adding-missi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
