--- a/series.conf
+++ b/series.conf
@@ -12879,6 +12879,7 @@
 	patches.kernel.org/6.12.63-277-net-hsr-remove-one-synchronize_rcu-from-hsr_d.patch
 	patches.kernel.org/6.12.63-278-net-hsr-remove-synchronize_rcu-from-hsr_add_p.patch
 	patches.kernel.org/6.12.63-279-net-hsr-Create-and-export-hsr_get_port_ndev.patch
+	patches.kernel.org/6.12.63-280-net-hsr-create-an-API-to-get-hsr-port-type.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
