selftests: bonding: add ipvlan over bond testing (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12870,6 +12870,7 @@
 	patches.kernel.org/6.12.63-268-spi-ch341-fix-out-of-bounds-memory-access-in-.patch
 	patches.kernel.org/6.12.63-269-vfio-pci-Use-RCU-for-error-request-triggers-t.patch
 	patches.kernel.org/6.12.63-270-net-phy-aquantia-check-for-NVMEM-deferral.patch
+	patches.kernel.org/6.12.63-271-selftests-bonding-add-ipvlan-over-bond-testin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
