ASoC: tas2781: correct the wrong period (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12813,6 +12813,7 @@
 	patches.kernel.org/6.12.63-211-erofs-limit-the-level-of-fs-stacking-for-file.patch
 	patches.kernel.org/6.12.63-212-RDMA-bnxt_re-Fix-the-inline-size-for-GenP7-de.patch
 	patches.kernel.org/6.12.63-213-RDMA-bnxt_re-Pass-correct-flag-for-dma-mr-cre.patch
+	patches.kernel.org/6.12.63-214-ASoC-tas2781-correct-the-wrong-period.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
