mtd: rawnand: lpc32xx_slc: fix GPIO descriptor leak on probe error and remove (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12683,6 +12683,7 @@
 	patches.kernel.org/6.12.63-081-ARM-dts-renesas-r9a06g032-rzn1d400-db-Drop-in.patch
 	patches.kernel.org/6.12.63-082-Revert-mtd-rawnand-marvell-fix-layouts.patch
 	patches.kernel.org/6.12.63-083-mtd-nand-relax-ECC-parameter-validation-check.patch
+	patches.kernel.org/6.12.63-084-mtd-rawnand-lpc32xx_slc-fix-GPIO-descriptor-l.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
