firmware_loader: make RUST_FW_LOADER_ABSTRACTIONS select FW_LOADER (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12836,6 +12836,7 @@
 	patches.kernel.org/6.12.63-234-ASoC-nau8325-add-missing-build-config.patch
 	patches.kernel.org/6.12.63-235-gfs2-Prevent-recursive-memory-reclaim.patch
 	patches.kernel.org/6.12.63-236-ASoC-fsl_xcvr-clear-the-channel-status-contro.patch
+	patches.kernel.org/6.12.63-237-firmware_loader-make-RUST_FW_LOADER_ABSTRACTI.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
