f2fs: introduce reserved_pin_section sysfs entry (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12895,6 +12895,7 @@
 	patches.kernel.org/6.12.63-293-f2fs-fix-to-avoid-running-out-of-free-segment.patch
 	patches.kernel.org/6.12.63-294-f2fs-add-carve_out-sysfs-node.patch
 	patches.kernel.org/6.12.63-295-f2fs-sysfs-add-encoding_flags-entry.patch
+	patches.kernel.org/6.12.63-296-f2fs-introduce-reserved_pin_section-sysfs-ent.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
