--- a/series.conf
+++ b/series.conf
@@ -12830,6 +12830,7 @@
 	patches.kernel.org/6.12.63-228-iommu-arm-smmu-qcom-Enable-use-of-all-SMR-gro.patch
 	patches.kernel.org/6.12.63-229-RDMA-irdma-Fix-data-race-in-irdma_sc_ccq_arm.patch
 	patches.kernel.org/6.12.63-230-RDMA-irdma-Fix-data-race-in-irdma_free_pble.patch
+	patches.kernel.org/6.12.63-231-RDMA-irdma-Do-not-directly-rely-on-IB_PD_UNSA.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
