fs/ntfs3: Prevent memory leaks in add sub record (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12776,6 +12776,7 @@
 	patches.kernel.org/6.12.63-174-powerpc-64s-hash-Restrict-stress_hpt_struct-m.patch
 	patches.kernel.org/6.12.63-175-powerpc-64s-ptdump-Fix-kernel_hash_pagetable-.patch
 	patches.kernel.org/6.12.63-176-fs-ntfs3-out1-also-needs-to-put-mi.patch
+	patches.kernel.org/6.12.63-177-fs-ntfs3-Prevent-memory-leaks-in-add-sub-reco.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
