ALSA: wavefront: Fix integer overflow in sample size validation (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12951,6 +12951,7 @@
 	patches.kernel.org/6.12.63-349-usb-phy-Initialize-struct-usb_phy-list_head.patch
 	patches.kernel.org/6.12.63-350-usb-dwc3-dwc3_power_off_all_roothub_ports-Use.patch
 	patches.kernel.org/6.12.63-351-ALSA-dice-fix-buffer-overflow-in-detect_strea.patch
+	patches.kernel.org/6.12.63-352-ALSA-wavefront-Fix-integer-overflow-in-sample.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
