block/mq-deadline: Switch back to a single dispatch list (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12648,6 +12648,7 @@
 	patches.kernel.org/6.12.63-046-iio-imu-st_lsm6dsx-Fix-measurement-unit-for-o.patch
 	patches.kernel.org/6.12.63-047-firmware-qcom-tzmem-fix-qcom_tzmem_policy-ker.patch
 	patches.kernel.org/6.12.63-048-block-mq-deadline-Introduce-dd_start_request.patch
+	patches.kernel.org/6.12.63-049-block-mq-deadline-Switch-back-to-a-single-dis.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
