--- a/series.conf
+++ b/series.conf
@@ -12687,6 +12687,7 @@
 	patches.kernel.org/6.12.63-085-perf-Remove-get_perf_callchain-init_nr-argume.patch
 	patches.kernel.org/6.12.63-086-bpf-Refactor-stack-map-trace-depth-calculatio.patch
 	patches.kernel.org/6.12.63-087-bpf-Fix-stackmap-overflow-check-in-__bpf_get_.patch
+	patches.kernel.org/6.12.63-088-perf-x86-intel-cstate-Remove-PC3-support-from.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
