--- a/series.conf
+++ b/series.conf
@@ -12631,6 +12631,7 @@
 	patches.kernel.org/6.12.63-029-sched-fair-Forfeit-vruntime-on-yield.patch
 	patches.kernel.org/6.12.63-030-irqchip-irq-bcm7038-l1-Fix-section-mismatch.patch
 	patches.kernel.org/6.12.63-031-irqchip-irq-bcm7120-l2-Fix-section-mismatch.patch
+	patches.kernel.org/6.12.63-032-irqchip-irq-brcmstb-l2-Fix-section-mismatch.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
