--- a/series.conf
+++ b/series.conf
@@ -12763,6 +12763,7 @@
 	patches.kernel.org/6.12.63-161-drm-msm-dpu-drop-dpu_hw_dsc_destroy-prototype.patch
 	patches.kernel.org/6.12.63-162-ps3disk-use-memcpy_-from-to-_bvec-index.patch
 	patches.kernel.org/6.12.63-163-bpf-Handle-return-value-of-ftrace_set_filter_.patch
+	patches.kernel.org/6.12.63-164-selftests-bpf-Fix-failure-paths-in-send_signa.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
