--- a/series.conf
+++ b/series.conf
@@ -12871,6 +12871,7 @@
 	patches.kernel.org/6.12.63-269-vfio-pci-Use-RCU-for-error-request-triggers-t.patch
 	patches.kernel.org/6.12.63-270-net-phy-aquantia-check-for-NVMEM-deferral.patch
 	patches.kernel.org/6.12.63-271-selftests-bonding-add-ipvlan-over-bond-testin.patch
+	patches.kernel.org/6.12.63-272-selftests-bonding-add-delay-before-each-xvlan.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
