ocfs2: relax BUG() to ocfs2_error() in __ocfs2_move_extent() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12750,6 +12750,7 @@
 	patches.kernel.org/6.12.63-148-coresight-etm4x-Add-context-synchronization-b.patch
 	patches.kernel.org/6.12.63-149-clk-renesas-r9a06g032-Fix-memory-leak-in-erro.patch
 	patches.kernel.org/6.12.63-150-lib-vsprintf-Check-pointer-before-dereferenci.patch
+	patches.kernel.org/6.12.63-151-ocfs2-relax-BUG-to-ocfs2_error-in-__ocfs2_mov.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
