virtio: fix typo in virtio_device_ready() comment (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12845,6 +12845,7 @@
 	patches.kernel.org/6.12.63-243-ext4-improve-integrity-checking-in-__mb_check.patch
 	patches.kernel.org/6.12.63-244-of-Skip-devicetree-kunit-tests-when-RISCV-ACP.patch
 	patches.kernel.org/6.12.63-245-virtio_vdpa-fix-misleading-return-in-void-fun.patch
+	patches.kernel.org/6.12.63-246-virtio-fix-typo-in-virtio_device_ready-commen.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
